# noa_ark_os

./: .actrc  .copilot  .env.example  .gitattributes  .gitignore  .npmrc  .pnpmfile.cjs  1autonomous-system-map.mmd  AGENT.md  AGENT_INTEGRATION_PHASE1_COMPLETE.md  BUILD_STATUS_FINAL.md  CHANGELOG.md  CLAUDE.md  CODEX.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  CRC_IMPROVEMENTS_COMPLETE.md  Cargo.toml  GITHUB_SYNC_COMPLETE.md  HIERARCHY.md  LEGACY_INVENTORY.md  LICENSE  Makefile  OVERVIEW.md  PROJECT_SUMMARY.md  README.md  README_AOS.md  README_PROJECT_STRUCTURE.md  TODO.md  WORKSPACE_MEMORY.md  WORKSPACE_ORGANIZATION_PLAN.md  WORKSPACE_SETUP.md  WSL_CODE_DROP_GUIDE.md  build_output.txt  chatgpt1.json  conftest.py  merge-old-work.ps1  package.json  part5.json  pnpm-lock.yaml  (+5 more)
agents/: .gitignore  AGENT-Auto-Configuration.md  AGENT.md  Cargo.toml  README.md
agents/agent-description/: README.md
agents/agents-unorganized/: README.md  academic-search.md  blog-writing.md  commit-push.md  paper-research.md  weekly-report-writing.md
agents/audit/: senior-code-reviewer.md
agents/backend/: backend-developer.md  backend-typescript-architect.md  python-backend-engineer.md
agents/commands/: commit-push.md  find-paper.md  search-papers.md  weekly-report.md  wpaper.md
agents/core/: code-archaeologist.md  code-reviewer.md  documentation-specialist.md  performance-optimizer.md
agents/data/: agent_directory.csv  agent_names.txt  agent_roles.json  agents_parallel.json
agents/docs/: best-practices.md  creating-agents.md  dependencies.md
agents/examples/: load_agent_registry.rs
agents/frontend/: frontend-developer.md  tailwind-css-expert.md  ui-engineer.md
agents/orchestrators/: project-analyst.md  team-configurator.md  tech-lead-orchestrator.md
agents/rtt-gateway/: AGENT-RTT-README.md
agents/src/: error.rs  factory.rs  hive.rs  inference.rs  lib.rs  metadata.rs  registry.rs  runtime.rs  swarm.rs  types.rs  unified_types.rs
agents/subject-specialist/: README.md
agents/tools/: agent
ai/runtime/: Cargo.toml
apps/cli/: Cargo.toml  build.rs
cicd/: CL_TREE.md  CRC_CI_CD.md  Cargo.toml  README.md
cicd/examples/: validate_portable.rs
cicd/ml/: README.md  drift_detection.yaml  rollout_gate.yaml
cicd/pipelines/: agent-self-heal.yaml  crc-auto.yaml  doc-refresh.yaml
cicd/scripts/: codex-mcp-health.sh  dev-env-smoke.sh
cicd/src/: ledger.rs  lib.rs  trigger.rs  validation.rs
cicd/workflows/: local-devshell-regression.ps1  local-devshell-regression.sh  rust-ci-github-actions.md
core/: Cargo.toml  README.md
core/config/: default_manifest.yaml
core/kernel/: __init__.py  north_star.deflex.json  north_star.py  service.json
core/proptest-regressions/: gateway.txt
core/src/: fs.rs  gateway.rs  host_control.rs  ipc.rs  kernel.rs  lib.rs  memory.rs  metrics.rs  process.rs  runtime.rs  security.rs  symbols.rs  time.rs  token.rs  utils.rs
core/tests/: host_control_isolation.rs  token_contract.rs  world_reconciler.rs
crc/: .gitignore  Cargo.toml  DROP_IN_QUICKSTART.md  FORK_PROCESSING_SYSTEM.md  FORK_TEST_PLAN.md  QUICK_REFERENCE.md  README.md  SANDBOX_MODELS.md  USER_WORKFLOW.md  detect-forks.ps1
crc/config/: patterns.yaml  rules.yaml  sources.yaml  standards.yaml
crc/src/: archive.rs  build.rs  cas.rs  commands.rs  engine.rs  error.rs  extraction.rs  graph.rs  ir.rs  lib.rs  main.rs  orchestrator.rs  parallel.rs  processor.rs  telemetry.rs  transform.rs  types.rs  watcher.rs
crc/tests/: archive_ingestion.rs  cas_smoke.rs  dag_seed.rs  digest_smoke.rs  e2e-test.ps1
memory/: Cargo.toml
memory/src/: coordinator.rs  lib.rs  models.rs  store.rs
plugins/sdk/: Cargo.toml  README.md
repos/deflex-ai-os/: Cargo.toml  README.md  docker-compose.yml
runtime/manager/: Cargo.toml  service.json
server/: BUILD_SPEC.md  Cargo.toml  README.md  TOOLS_AUDIT.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  tasks.plan.xml
server/ai/: router.ts
server/api/: Cargo.toml  build.rs
server/caddy/: Caddyfile  README.md  caddy.env
server/caddy_manager/: Cargo.toml
server/config/: default.toml  dev.toml
server/core/: Cargo.toml
server/deploy/: __init__.py  env_manager.py  single_host.py  single_host_profile.json
server/gateway/: Cargo.toml  README.md
server/go/: README.md  go.mod  go.sum
server/helm/: Chart.yaml  values.yaml
server/mcp/: Cargo.toml
server/migrations/: 0001_init.sql  20251118231500_init_gateway_schema.sql
server/observability/: Cargo.toml
server/protos/: noa_tools.proto
server/python/: README.md  requirements.txt
server/relocation/: Cargo.toml
server/src/: adaptive_scaling.rs  lib.rs  orchestrator.rs
server/tests/: docker-compose.test.yml  requirements.txt  run_suite.py  ui_api.Dockerfile
server/tools/: MULTI_PLATFORM.md  QUICK_START.md  README.md  SETTINGS_SUMMARY.md  activate-caddy.ps1  activate-caddy.sh  activate-cargo-wsl.sh  activate-cargo.ps1  activate-cargo.ps1.old  activate-cargo.sh  activate-cargo.sh.old  activate-node.ps1  activate-node.sh  activate-pwsh.ps1  activate-pwsh.sh  activate-toolchains.sh  caddy-portable.manifest.json  dev_env_cli.py  fix-line-endings.ps1  node-portable.manifest.json  pwsh-portable.manifest.json  setup-portable-caddy.ps1  setup-portable-caddy.sh  setup-portable-cargo.ps1  setup-portable-cargo.sh  setup-portable-node.ps1  setup-portable-node.sh  setup-portable-pwsh.ps1  setup-portable-pwsh.sh
server/tools_agent/: CLAIMS.md  CONSOLIDATION.md  Cargo.toml  README.md  TRUTH_GATE.md
server/ui_api/: Cargo.toml  build.rs
server/vault/: README.md  configure-gateway-auth-simple.sh  configure-gateway-auth.sh  gateway_auth.example.json  setup-gateway-auth.sh  start.sh  status.sh  stop.sh  vault.hcl
services/relocation-daemon/: Cargo.toml
tools/quarantine_guard/: Cargo.toml
tools/symbol_graph/: Cargo.toml  README.md
workflow/: Cargo.toml  README.md  consolidation_merger_guide.md  docs-refresh.md  makefile_patterns.md
workflow/blueprints/: README.md
workflow/cron/: analytics_materializer.py  self_repair_scheduler.py
workflow/src/: agent_dispatch.rs  auto_fixers.rs  lib.rs  (+3 more)
(+6291 files in other folders)
