[workspace]
resolver = "2"

members = [
    "core",
    "agents",
    "workflow",
    "sandbox",
    "cicd",
    "crc",
    "ui/core",
    "server/ai/inference",
    "server/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
noa_inference = { path = "server/ai/inference" }
