[workspace]
resolver = "2"

members = [
    "core",
    "agents",
    "ai/runtime",
    "workflow",
    "sandbox",
    "cicd",
    "crc",
    "crc-adapter-sdk",
    "runtime/manager",
    "ui/core",
    "server/ai/inference",
    "server/caddy_manager",
    "server/gateway",
    "server/core",
    "server/api",
    "server/observability",
    "services/relocation-daemon",
    "apps/cli",
    "server/relocation",
    "server/ui_api",
    "tools/symbol_graph",
    "tools/security/shim",
    "plugins/sdk",
    "tools/quarantine_guard",
    "server/tools_agent",
    "server/mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
noa_inference = { path = "server/ai/inference" }
thiserror = "1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
