[package]
name = "noa_agents"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Multi-layered AI agent system with hive mind and swarm capabilities"
license = "MIT"

[dependencies]
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV parsing for agent directory
csv = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
agentaskit-executive = []

[lib]
name = "noa_agents"
path = "src/lib.rs"

[[example]]
name = "agent_registry_demo"
path = "../examples/agent_registry_demo.rs"

[[example]]
name = "load_agent_registry"
path = "examples/load_agent_registry.rs"

[dev-dependencies]
tokio-test = "0.4"
