[package]
name = "noa_core"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Core operating system layer for NOA ARK OS"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
thiserror = "1.0"
sysinfo = { version = "0.30", features = ["serde"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

[lib]
name = "noa_core"
path = "src/lib.rs"

[[bin]]
name = "noa_kernel"
path = "src/bin/kernel.rs"

[[bin]]
name = "noa_host_control"
path = "src/bin/host_control.rs"

[[bin]]
name = "noa_world"
path = "src/bin/world.rs"

[dev-dependencies]
tempfile = "3.8"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
