[package]
name = "noa_crc"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Continuous ReCode system with AI supervision"
license = "MIT"

[dependencies]
# Core
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File watching
notify = "6.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.5"

[lib]
name = "noa_crc"
path = "src/lib.rs"

[[bin]]
name = "crc-server"
path = "src/main.rs"
