[package]
name = "noa_crc"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Continuous ReCode system with AI supervision"
license = "MIT"

[dependencies]
# Core
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File watching
notify = "6.1"

# CLI
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }

# Graphs and hashing
petgraph = "0.6"
blake3 = "1.5"

# Filesystem utilities
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Archive handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }
flate2 = "1.0"
tar = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.5"

[lib]
name = "noa_crc"
path = "src/lib.rs"

[[bin]]
name = "crc-server"
path = "src/main.rs"
