[package]
name = "noa_memory"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Hierarchical memory stores for NOA ARK OS workflows"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_cbor = "0.11"
thiserror = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
