[package]
name = "noa_orchestrator"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NOA ARK OS Team"]
description = "Runtime orchestration utilities and adaptive scaling policies for the unified server"

[workspace]
resolver = "2"
members = [
    "gateway",
    "ui_api",
    "relocation",
    "ai/inference",
    "bins/noa-unified-server",
]
default-members = [
    ".",
    "gateway",
    "ui_api",
    "relocation",
    "ai/inference",
    "bins/noa-unified-server",
]

[dependencies]
noa_core = { path = "../core" }
tracing = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
license = "MIT"

[workspace.dependencies]
# Web & Networking
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tonic = "0.11"
tonic-build = "0.11"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Security
jsonwebtoken = "9.0"
rustls = "0.22"
axum-server = { version = "0.6", features = ["tls-rustls"] }

# ML & Inference
candle-core = "0.3"
safetensors = "0.4"

# Plugins
wasmtime = "16.0"
wasmtime-wasi = "16.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
