[package]
name = "noa_workflow"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Unified workflow engine for NOA ARK OS"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
noa_core = { path = "../core" }
noa_agents = { path = "../agents" }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
thiserror = "1"
