[package]
name = "ai-runtime"
version = "0.1.0"
edition = "2021"

description = "Automated training and evaluation orchestration for NOA ARK OS"
license = "MIT"

[dependencies]
agents = { package = "noa_agents", path = "../../agents" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
