[package]
name = "noa-cli"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "NOA Ark OS unified CLI (kernel, world, registry, trust, snapshot, agent, policy, sbom, pipeline, profile) with relocation daemon tooling"
license = "MIT"

[[bin]]
name = "noa"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
relocation-daemon = { path = "../../services/relocation-daemon" }
uuid = { version = "1.6", features = ["v4"] }
noa_workflow = { path = "../../workflow" }
noa-plugin-sdk = { path = "../../plugins/sdk" }
noa-tools-agent = { path = "../../server/tools_agent", default-features = false, features = ["client"] }
noa_inference = { path = "../../server/ai/inference", optional = true }
noa_cicd = { path = "../../cicd", optional = true }
noa_core = { path = "../../core" }
noa_caddy_manager = { path = "../../server/caddy_manager" }
noa_observability = { path = "../../server/observability" }
walkdir = "2"
shlex = "1.3"
futures = "0.3"

[build-dependencies]
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
noa-tools-agent = { path = "../../server/tools_agent" }

[features]
default = []
inference = ["noa_inference"]
cicd = ["noa_cicd"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23.0"
