[workspace]
resolver = "2"
members = [
    "apps/*",
    "services/*",
    "packages/*",
    "trainer",
]
exclude = [
    "vendor/*",
    "external/*",
    "notebooks",
]

[workspace.package]
version = "0.1.0"
authors = ["FlexNetOS"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlexNetOS/star-mono"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# ML/AI
candle-core = "0.8"
burn = "0.15"
ort = "2.0"  # ONNX Runtime

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"