[package]
name = "runtime_manager"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Runtime orchestration layer that selects execution backends based on hardware capabilities"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
noa_core = { path = "../../core" }
thiserror = "1.0"
wasmtime = "39.0.0"
wasmtime-wasi = "39.0.0"
cap-std = "3.4.0"
wasi-common = "39.0.0"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.10"
wat = "1.0"
