[package]
name = "noa_api"
description = "Unified Axum + Tonic server exposing NOA's control plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
metrics = "0.21"
futures = "0.3"
http-body-util = "0.1"
metrics-exporter-prometheus = "0.13"
noa_gateway = { path = "../gateway" }
prost = "0.13"
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
