[package]
name = "noa_caddy_manager"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Client for the Caddy admin API used by the NOA unified server"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
