[package]
name = "noa_gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NOA ARK OS Team"]
description = "Programmable multi-protocol gateway for NOA ARK OS"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
parking_lot = "0.12"
thiserror = "1.0"
noa_core = { path = "../../core" }
noa_agents = { path = "../../agents" }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"

[features]
default = []
