[package]
name = "noa_gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NOA ARK OS Team"]
description = "Programmable multi-protocol gateway for NOA ARK OS"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
parking_lot = "0.12"
thiserror = "1.0"
noa_core = { path = "../../core" }
noa_agents = { path = "../../agents" }
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = { version = "9", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ctrlc = "3"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tower = "0.4"
hyper = "1.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["v4"] }
url = "2.5"
noa_server_core = { path = "../core" }
noa_observability = { path = "../observability" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
jsonwebtoken = { version = "9", default-features = false }
[features]
default = []

[[bin]]
name = "gateway"
path = "src/main.rs"
