[package]
name = "relocation-server"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "HTTP API for the NOA Ark OS relocation daemon"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
relocation-daemon = { path = "../../services/relocation-daemon" }
uuid = { version = "1.6", features = ["serde", "v4"] }
