[package]
name = "noa-tools-agent"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Sandboxed tool server and client for NOA Ark OS agents"
license = "MIT"

[lib]
name = "noa_tools_agent"
path = "src/lib.rs"

[[bin]]
name = "noa-tools-agent"
path = "src/main.rs"

[features]
default = ["client", "server"]
client = ["dep:reqwest"]
server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber"
]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"], optional = true }
axum = { version = "0.7", optional = true, features = ["macros", "json"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }
reqwest = { version = "0.11", optional = true, features = ["json"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1" }
walkdir = "2"
globset = "0.4"
regex = "1"
zstd = { version = "0.13", features = ["zstdmt"], default-features = true }
tar = "0.4"
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
sha2 = "0.10"
noa-plugin-sdk = { path = "../../plugins/sdk" }
