[package]
name = "relocation-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Asynchronous relocation daemon for NOA Ark OS"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
noa_core = { path = "../../core" }
