[package]
name = "noa_symbol_graph"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Tree-sitter backed symbol graph builder with stable IDs"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
noa_core = { path = "../../core" }
thiserror = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent", "serde"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[[bin]]
name = "notebook_watcher"
path = "src/notebook_watcher.rs"

[dev-dependencies]
tempfile = "3"
