[package]
name = "noa-unified-server"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Thin binary wrapper that wires the gateway and orchestrator together"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
noa_gateway = { path = "../../gateway" }
noa_orchestrator = { path = "../.." }
