[package]
name = "noa_security_shim"
version = "0.1.0"
edition = "2021"
authors = ["NOA ARK OS Team"]
description = "Offline security scanner shims for CI"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
